--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,23 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.home.registrationlesson13_2.Edit">
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name"
         android:inputType="textPersonName"
-        android:id="@+id/nameEditTextEdit"
+        android:id="@+id/nameTextViewEdit"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Last"
         android:inputType="textPersonName"
-        android:id="@+id/lastEditTextEdit"
-        android:layout_below="@+id/nameEditTextEdit"
+        android:id="@+id/lastTextViewEdit"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/nameTextViewEdit"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -36,7 +38,7 @@
         android:text="Email"
         android:inputType="textEmailAddress"
         android:id="@+id/emailEditTextEdit"
-        android:layout_below="@+id/lastEditTextEdit"
+        android:layout_below="@+id/lastTextViewEdit"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -69,6 +71,16 @@
         android:layout_below="@+id/idEditTextEdit"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        android:id="@+id/saveButton"
+        android:layout_below="@+id/addressEditTextEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="clickSaveBtn"/>
 
 
 </RelativeLayout>
