--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:configChanges="orientation"
     tools:context="com.example.home.registrationlesson13_2.MainActivity">
 
     <LinearLayout
@@ -40,7 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout"
-            android:alpha="0.5"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
